<resources>
    <string name="app_name">Tawlat</string>
    <string name="facebook_app_id">492169820919098</string>
    <string name="unknown_error_has_occurred">Unknown error has occurred.</string>
    <string name="s_seconds_ago">%s seconds ago</string>
    <string name="s_second_ago">%s second ago</string>
    <string name="s_days_ago">%s days ago</string>
    <string name="s_day_ago">%s day ago</string>
    <string name="s_months_ago">%s months ago</string>
    <string name="s_month_ago">%s month ago</string>
    <string name="s_years_ago">" %s years ago</string>
    <string name="s_year_ago">%s year ago</string>
    <string name="s_minutes_ago">%s minutes ago</string>
    <string name="s_minute_ago">%s minute ago</string>
    <string name="s_hours_ago">%s hours ago</string>
    <string name="s_hour_ago">%s hour ago</string>
    <string name="reset_link_has_been_sent_to_your_email">Reset link has been sent to your email</string>
    <string name="there_is_no_account_associated_with_this_email">There is no account associated with this email</string>
    <string name="loading">Loading</string>
    <string name="home">Home</string>
    <string name="near_me">Near Me</string>
    <string name="settings">Settings</string>
    <string name="how_it_works">How it Works?</string>
    <string name="logout">Logout</string>
    <string name="my_account">My Account</string>
    <string name="my_bookings">My Bookings</string>
    <string name="my_vouchers">My Vouchers</string>
    <string name="my_favorites">My Favorites</string>
    <string name="login">Login</string>
    <string name="book_now">Book Now</string>
    <string name="pts">pts</string>
    <string name="details">Details</string>
    <string name="showMenu">Show Menu</string>
    <string name="top_points">Top Points</string>
    <string name="offers_and_events"><![CDATA[Offers & Events]]></string>
    <string name="recommended">Recommended</string>
    <string name="location">Location</string>
    <string name="search">Search</string>
    <string name="choose_city">Choose City</string>
    <string name="error">Error</string>
    <string name="or_use_advanced_search">Or use advanced search</string>
    <string name="search_venues_cuisines_locations">Search Venues, Cuisines, or Locations</string>
    <string name="venue">Venue</string>
    <string name="cuisine">Cuisine</string>
    <string name="directory">Directory</string>
    <string name="search_all_venues_in_city">Show all venues in %s</string>
    <string name="book_offer">Book Offer</string>
    <string name="there_are_no_menus_for_this_venue">There are no menus for this venue.</string>
    <string name="venue_menus">Venue Menus</string>
    <string name="f_km">%f KM</string>
    <string name="no_nearby_venues_have_been_found">No near by venues have been found.</string>
    <string name="action_required">Action Required</string>
    <string name="please_enable_location_from_your_settings">Please enable location from your settings.</string>
    <string name="open_location_settings">Open Location Settings</string>
    <string name="cancel">Cancel</string>
    <string name="you_need_to_grant_location_permissions">You need to grant location permissions</string>
    <string name="you_need_to_enable_location">You need to enable location.</string>
    <string name="register">Register</string>
    <string name="notamember">Not a member?</string>
    <string name="forgot_password_question_mark">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="ok">OK</string>
    <string name="enter_your_email_colon">Enter your email:</string>
    <string name="the_email_is_not_valid">The email is not valid.</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="request_got_cancelled">Request got cancelled.</string>
    <string name="invaild_email_or_password">Invalid email or password.</string>
    <string name="total_point_balance">Total Point Balance</string>
    <string name="total_points_balance">Total Point Balance</string>
    <string name="checked_out_reservations">Checked Out Reservations</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="date_colon">Date:</string>
    <string name="time_colon">Time:</string>
    <string name="people_colon">People:</string>
    <string name="you_have_no_upcoming_booking">No bookings? Well, that means no free vouchers</string>
    <string name="you_have_no_upcoming_booking_sub">Your attended bookings will allow you to collect points and exchange them for vouchers</string>
    <string name="you_have_no_booking_history">Have you honored your bookings yet?</string>
    <string name="you_have_no_booking_history_sub">You will see here all of the attended bookings that you have made. Allow up to 48 hours to for your bookings to appear </string>
    <string name="you_have_no_cancelled_booking">You have not cancelled any of your bookings</string>
    <string name="you_have_no_cancelled_booking_sub">Remember, by giving enough time to cancel your booking, you are making the table available for others!</string>
    <string name="you_have_no_noshow_booking">Well done for keeping good time management</string>
    <string name="you_have_no_noshow_booking_sub">We dont like to say this, but any consecutive 3 No Shows in a period of 6 months will block your account</string>
    <string name="no_favorites_title">NO FAVORITES ADDED</string>
    <string name="no_favorite_venues">Start adding venues to your favorites list for easy access</string>
    <string name="no_pending_vouchers_title">NO PENDING VOUCHERS</string>
    <string name="no_history_vouchers_title">NO HISTORY VOUCHERS</string>
    <string name="no_pending_vouchers">You do not have any discount vouchers yet. Start booking to collect reward points and exchange the points with cash discount.</string>
    <string name="no_history_vouchers">You do not have any history of vouchers.</string>
    <string name="aed">AED</string>
    <string name="redeemable_at_certain_venues">Redeemable at certain venues</string>
    <string name="gift_voucher_paranthesis">(Gift Voucher)</string>
    <string name="points_voucher_paranthesis">(Points Voucher)</string>
    <string name="redeemed_at_s">Redeemed at %s</string>
    <string name="pending_vouchers">Pending Vouchers</string>
    <string name="history_vouchers">History Vouchers</string>
    <string name="redeemed_on_s">Redeemded on %s</string>
    <string name="expires_at_s">Expires on %s</string>
    <string name="go_to_venue">Go to venue</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="change_password">Change Password</string>
    <string name="change_city">Change City</string>
    <string name="support">Support</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="the_new_passwords_do_not_match">The new passwords do not match.</string>
    <string name="support_section">Support Section</string>
    <string name="about_tawlat_colon">About Tawlat:</string>
    <string name="faqs_colon">FAQs:</string>
    <string name="terms_of_use_colon">Terms of Use:</string>
    <string name="privacy_policy_colon">Privacy Policy:</string>
    <string name="contact_us_colon">Contact Us:</string>
    <string name="url_about"><u>http://tawlat.com/About</u></string>
    <string name="url_faqs"><u>http://tawlat.com/FAQs</u></string>
    <string name="url_terms_of_use"><u>http://tawlat.com/TermsOfUse</u></string>
    <string name="url_privacy_policy"><u>http://tawlat.com/PrivacyPolicy</u></string>
    <string name="url_contact_us"><u>http://tawlat.com/Contact</u></string>
    <string name="retry">Retry</string>
    <string name="sign_up_and_get_24_aed">Sign up and get 25 AED</string>
    <string name="skip_underlined"><u>Skip</u></string>
    <string name="watch_the_video">Watch the Video</string>
    <string name="done_underlined"><u>Done</u></string>
    <string name="edit_reservation">Edit Reservation</string>
    <string name="cancel_reservation">Cancel Reservation</string>
    <string name="venues">Venues</string>
    <string name="you_need_to_grant_the_permission">You need to grant the permission.</string>
    <string name="between_parantheses">(%s)</string>
    <string name="open_today">Open Today</string>
    <string name="closed_today">Closed Today</string>
    <string name="good_for">Good For</string>
    <string name="address">Address</string>
    <string name="parking_info">Parking Info</string>
    <string name="directions">Directions</string>
    <string name="about">About</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="phone_colon">Phone:</string>
    <string name="closed_paranthesis">(Closed)</string>
    <string name="no_reviews">No Reviews</string>
    <string name="be_the_first_to_write_one">Be the First to Write One</string>
    <string name="more_reviews">More Reviews</string>
    <string name="recent_reviews">Recent Reviews</string>
    <string name="book_a_table">Book a Table</string>
    <string name="rate_this_venue">Rate this venue</string>
    <string name="service">Service</string>
    <string name="quality">Quality</string>
    <string name="cleanliness">Cleanliness</string>
    <string name="ambience">Ambience</string>
    <string name="write_your_review_here">Write your review here.</string>
    <string name="submit">Submit</string>
    <string name="share_venue_text">I found %s on tawlat and thought of sharing this with you.\n See more on http://tawlat.com</string>
    <string name="s_on_tawlat">"%s on tawlat"</string>
    <string name="share_with">Share With</string>
    <string name="$">$</string>
    <string name="$_details">Less than 70 Dhs</string>
    <string name="$$">$$</string>
    <string name="$$_details">Between 70-200 Dhs</string>
    <string name="$$$">$$$</string>
    <string name="$$$_details">Between 200-350 Dhs</string>
    <string name="$$$$">$$$$</string>
    <string name="$$$$_details">Between 350-500 Dhs</string>
    <string name="$$$$$">$$$$$</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="special_request_question">Special Request?</string>
    <string name="please_tell_us_if_you_have_any_special_requests">Please tell us if you have any special requests.</string>
    <string name="i_want_to_redeem_colon">I want to redeem:</string>
    <string name="nothing_just_proceed_with_booking">Nothing, just proceed with booking.</string>
    <string name="points">Points</string>
    <string name="gift_voucher">Gift Voucher</string>
    <string name="first_name_star">FirstName*</string>
    <string name="last_name_star">Last Name*</string>
    <string name="email_star">Email*</string>
    <string name="email_note">*This is going to be your login ID</string>
    <string name="password_star">Password*</string>
    <string name="mobile_star">Mobile*</string>
    <string name="city_star">City*</string>
    <string name="nationality">Nationality</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="select_bracket">[Select]</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="about_me">About Me</string>
    <string name="tell_us_about_yourself">Tell us about yourself.</string>
    <string name="your_account_is_not_verified_yet">Your account is not verified yet</string>
    <string name="please_enter_verification_code">Please enter the verification code</string>
    <string name="code">Code</string>
</resources>