<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:paddingEnd="20dp"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
             android:paddingStart="20dp"
             android:paddingTop="30dp"
             android:stretchColumns="0,1">

    <TableRow
        android:layout_marginBottom="10dp"
        >

        <TextView
            android:text="@string/about_tawlat_colon"
            android:textColor="@color/black"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/support_dialog_about"
            android:clickable="true"
            android:text="@string/url_about"
            android:textColor="@color/red_dark"
            android:textSize="12sp"
            />
    </TableRow>


    <TableRow
        android:layout_marginBottom="10dp"
        >

        <TextView
            android:text="@string/faqs_colon"
            android:textColor="@color/black"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/support_dialog_faqs"
            android:clickable="true"
            android:text="@string/url_faqs"
            android:textColor="@color/red_dark"
            android:textSize="12sp"
            />
    </TableRow>

    <TableRow
        android:layout_marginBottom="10dp"
        >

        <TextView
            android:text="@string/terms_of_use_colon"
            android:textColor="@color/black"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/support_dialog_terms_of_use"
            android:clickable="true"
            android:text="@string/url_terms_of_use"
            android:textColor="@color/red_dark"
            android:textSize="12sp"
            />
    </TableRow>

    <TableRow
        android:layout_marginBottom="10dp"
        >

        <TextView
            android:text="@string/privacy_policy_colon"
            android:textColor="@color/black"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/support_dialog_privacy_policy"
            android:clickable="true"
            android:text="@string/url_privacy_policy"
            android:textColor="@color/red_dark"
            android:textSize="12sp"
            />
    </TableRow>

    <TableRow
        android:layout_marginBottom="10dp"
        >

        <TextView
            android:text="@string/contact_us_colon"
            android:textColor="@color/black"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/support_dialog_contact_us"
            android:clickable="true"
            android:text="@string/url_contact_us"
            android:textColor="@color/red_dark"
            android:textSize="12sp"
            />
    </TableRow>

</TableLayout>