<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/your_account_is_not_verified_yet"
        android:textColor="@color/black"
        android:textSize="30sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/please_enter_verification_code"
        android:textColor="@color/orange_dark"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/code"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:hint="@string/code"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="30sp"/>


    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="40dp"
        android:background="@drawable/orangebutton"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="16sp"
        />
</LinearLayout>

